Bug 13319 - Page allocation failures with b43 and p54usb
Summary: Page allocation failures with b43 and p54usb
Status: CLOSED WILL_FIX_LATER
Alias: None
Product: Networking
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Arnaldo Carvalho de Melo
URL:
Keywords:
Depends on:
Blocks: 13070
  Show dependency tree
 
Reported: 2009-05-15 22:24 UTC by Rafael J. Wysocki
Modified: 2009-08-26 20:51 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.30-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-05-15 22:24:23 UTC
Subject    : Regression since 2.6.30-rc1 - Page allocation failures
Submitter  : Larry Finger <Larry.Finger@lwfinger.net>
Date       : 2009-04-29 21:01
References : http://marc.info/?l=linux-kernel&m=124103897101088&w=4
Handled-By : Johannes Berg <johannes@sipsolutions.net>

This entry is being used for tracking a regression from 2.6.29.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2009-06-07 21:03:01 UTC
References : http://lkml.org/lkml/2009/6/7/136
Comment 2 Rafael J. Wysocki 2009-06-29 23:20:34 UTC
On Monday 29 June 2009, Larry Finger wrote:
> Rafael J. Wysocki wrote:
> > This message has been generated automatically as a part of a report
> > of regressions introduced between 2.6.29 and 2.6.30.
> > 
> > The following bug entry is on the current list of known regressions
> > introduced between 2.6.29 and 2.6.30.  Please verify if it still should
> > be listed and let me know (either way).
> > 
> > 
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=13319
> > Subject             : Page allocation failures with b43 and p54usb
> > Submitter   : Larry Finger <Larry.Finger@lwfinger.net>
> > Date                : 2009-04-29 21:01 (61 days old)
> > References  : http://marc.info/?l=linux-kernel&m=124103897101088&w=4
> >               http://lkml.org/lkml/2009/6/7/136
> > Handled-By  : Johannes Berg <johannes@sipsolutions.net>
> 
> The cause of these failures has been determined. The wireless
> subsystem frequently requests buffers of size 4096, but when SLUB
> debugging is enabled and the debug info is added, the request becomes
> of order 1 and memory becomes fragmented.
> 
> A controversial "fix" in which SLUB debugging was disabled for
> allocations where adding such debugging info would increase the order
> was discussed and tried. With a quick look at the commit list for
> Linus's tree, I don't see that such a patch is available, but I will
> be corrected if I missed it.
Comment 5 Rafael J. Wysocki 2009-08-26 20:51:37 UTC
On Wednesday 26 August 2009, Pekka Enberg wrote:
> Hi Rafael,
> 
> On Wed, Aug 26, 2009 at 12:05 AM, Rafael J. Wysocki<rjw@sisk.pl> wrote:
> > This message has been generated automatically as a part of a report
> > of regressions introduced between 2.6.29 and 2.6.30.
> >
> > The following bug entry is on the current list of known regressions
> > introduced between 2.6.29 and 2.6.30.  Please verify if it still should
> > be listed and let me know (either way).
> >
> >
> > Bug-Entry       : http://bugzilla.kernel.org/show_bug.cgi?id=13319
> > Subject         : Page allocation failures with b43 and p54usb
> > Submitter       : Larry Finger <Larry.Finger@lwfinger.net>
> > Date            : 2009-04-29 21:01 (119 days old)
> > References      : http://marc.info/?l=linux-kernel&m=124103897101088&w=4
> >                  http://lkml.org/lkml/2009/6/7/136
> >                  http://lkml.org/lkml/2009/7/26/213
> > Handled-By      : Johannes Berg <johannes@sipsolutions.net>
> >                  David Rientjes <rientjes@google.com>
> > Patch           : http://patchwork.kernel.org/patch/37655/
> 
> FYI, the fix (a new slub debugging option) is queued for 2.6.32 and we
> don't have plans to backport it to -stable because it depends on SLUB
> out-of-memory diagnostic patches and the problem doesn't affect
> production configs.

Note You need to log in before you can comment on or make changes to this bug.