SLUB: Disable debugging if it increases the minimum page order

As CONFIG_SLUB_DEBUG is almost always enabled, we need to disable debugging on
per-cache basis if the added debug metadata increases minimum page order. This
is a problem for large caches such as kmalloc-4096 as seen in the following
bugzilla report:

  http://bugzilla.kernel.org/show_bug.cgi?id=13319

Cc: Christoph Lameter <cl@linux-foundation.org>
Cc: Larry Finger <Larry.Finger@lwfinger.net>
Cc: Mel Gorman <mel@csn.ul.ie>
Signed-off-by: Pekka Enberg <penberg@cs.helsinki.fi>